# nltools

./: .buildinfo  .coverage  .gitignore  .readthedocs.yml  .travis.yml  @AGENTS.md  AUDIT-0.6.0.md  CHANGELOG.md  CLAUDE.md  CNAME  LICENSE  MANIFEST.in  MIGRATION_v0.5_to_v0.6.md  NEXT-SESSION-TODO.md  PHASE3_COMPLETE.md  README.md  REFACTORING_PLAN.md  __init__.py  api.html  bootstrap-refactor.md  braindata-model-integration.md  cliff.toml  convert_docstrings.py  dartbrains_triage.md  db.sqlite3  docs-and-benchmarks.md  extract-hyperalignment.md  genindex.html  glm-integration-summary.md  index.html  install.html  manage.py  marimo-learning.md  migration.md  model-classes-tdd-plan.md  model-spec-log.md  model-spec.md  next-steps.md  nilearn-log.md  objects.inv  (+25 more)
.beads/: beads.left.meta.json  daemon-error  issues.jsonl  last-touched  metadata.json  sync_base.jsonl
.beads/hooks/: post-checkout  post-merge  pre-commit  pre-push  prepare-commit-msg
.claude/: settings.json
.cursor/rules/: 00-quick-reference.mdc  01-base-conventions.mdc  02-brain-data-patterns.mdc  03-design-matrix-patterns.mdc  04-adjacency-patterns.mdc  05-testing-patterns.mdc  06-neuroimaging-workflows.mdc  07-numpy-scipy-patterns.mdc  08-visualization-patterns.mdc  09-integration-patterns.mdc
.githooks/: commit-msg
.github/workflows/: auto_deploy_docs_pypi_onrelease.yml  auto_formatting_tests_and_coverage.yml  ci.yml  conda_coveralls_ci.yml  cron_tests.yml  cron_tests_and_coverage.yml  deploy_docs_only.yml  deploy_docs_pypi_onrelease.yml  deploy_pypi_only.yml  docs-deploy.yml  manual_deploy_docs_only.yml  manual_deploy_pypi_only.yml  release.yml  tests_and_coverage.yml  uv_workflow.yml  weekly.yml
.semgrep/: rules.yml
_downloads/005c53f1a1f5d495bcad8a0dec9ab44a/: plot_decomposition.ipynb
_downloads/0a2e8c4117f7960d73a5653cd240823b/: plot_similarity_example.ipynb
_downloads/2b86271d9b24d1e9df8c1b8648cf1ca2/: plot_multivariate_classification.ipynb
_downloads/2c07413499dba96e0afe1c9b6bfd30a2/: plot_neurovault_io.ipynb
_downloads/35d2feb98173247917a3d04ba75e488c/: plot_adjacency.ipynb
_downloads/62a7562dde742666b1319c4e0d0f6140/: plot_multivariate_prediction.ipynb
_downloads/69071685e4da0c34c980db62c34d1812/: plot_univariate_regression.py
_downloads/8170b2ae91948d6d36ef68fcf04eb9d0/: plot_univariate_regression.ipynb
_downloads/8f93b9068b23bc7245c0d3e8584c74b5/: plot_mask.ipynb
_downloads/a2de3a354d8665326c825864b7b86114/: plot_hyperalignment.ipynb
_downloads/b281fd17df21fdab00c368101eecae92/: plot_mni_prefs.ipynb
_downloads/c14456974247b0c35e1559d9a69e9efe/: plot_download.ipynb
_downloads/c1b7df9c5939f9def789ed830b55ef9d/: plot_neurovault_io.py
_downloads/f60fcc91b201d0e4382ebf3510b08d6a/: plot_design_matrix.ipynb
_downloads/f7220cd271c172dd06d974f7b4134f86/: plot_mask.py
_modules/: index.html
_modules/nltools/: analysis.html  cross_validation.html  datasets.html  file_reader.html  mask.html  plotting.html  prefs.html  simulator.html  stats.html  utils.html
_sources/: api.rst.txt  install.rst.txt
_sources/auto_examples/: index.rst.txt
audit_logs/: 01_api_shell.md  02_api_core.md  03_docstrings.md  04_types.md  05_antipatterns.md  06_coverage.md  07_deprecations.md  08_consolidation.md  api_standardization_plan.md  audit_summary.md  critical_findings.md  improvement_backlog.md
auto_examples/: index.html
auto_examples/01_DataOperations/: index.html  plot_adjacency.html  plot_design_matrix.html  plot_download.html  plot_mask.html  plot_mni_prefs.html  plot_neurovault_io.html  (+1 more)
benchmarks/: __init__.py  bench_collection.py  bench_inference.py  bench_predict.py  bench_ridge.py  benchmark_ridge.py  benchmark_ridge_systematic.py  benchmarking-guide.md  benchmarking.py  bootstrap_ridge_gpu_benchmark.py  build_docs.py  harness.py  inference_benchmarking.py  inference_benchmarking_rich.py  results_ridge_performance.csv  run.py  workloads.py
claude-guidelines/: banded-ridge-plan.md  bootstrap-refactor.md  bootstrap-tdd-plan.md  design-philosophy.md  fastsrm-tdd-plan.md  gpu-next.md  himalaya-gpu-resampling-research.md  hypertools-hyperalignment-research.md  inference-expansion-plan.md  knowledge-base.md  polars-migration-v2.md  polars-migration-v3-tdd.md  polars-migration.md  pymvpa-hyperalignment-research.md  refactoring-context.md  srm-hyperalignment-testing-strategy.md  tutorial-testing-plan.md  workflow-testing-research.md
docs/: API_DOCUMENTATION_PLAN.md  Makefile  TODO_TRACKER.md  _config.yml  _toc.yml  api.rst  changelog.md  conf.py  contributing.md  dartbrains-migration.md  environment.yml  index.md  index.rst  install.rst  migration-guide.md  myst.yml  performance.md  reference.rst  sphinx_requirements.txt  tutorials.rst
docs/api/: io.md  (+18 more)
examples/: README.txt  plot_adjacency.py  plot_hyperalignment.py
neurolearn/: settings.py  urls.py  wsgi.py
nltools/: LICENSE_nipy  __init__.py  analysis.py  backends.py  cache.py  cross_validation.py  data.py  datasets.py  file_reader.py  interfaces.py  mask.py  neighborhoods.py  pbs_job.py  pipelines.py  plotting.py  prefs.py  searchlight.py  simulated_signal.py  simulator.py  stats.py  util.py  utils.py  version.py
plans/: CONSOLIDATION-SUMMARY.md  MIGRATION_PLAN_STATS_TO_INFERENCE.md  PHASE4-CODE-QUALITY-PLAN.md  PHASE4-COMPLETION-SUMMARY.md  PHASE5-DOCUMENTATION-PLAN.md  PRE-RELEASE-VERIFICATION-PLAN.md  README.md  RELEASE-PREPARATION-PLAN.md  STATS_TODO_ACTION_PLAN.md  TODO-AUDIT.md  github-issues-audit.md  refactor-progress.md  v0.6.0-ACTION-PLAN.md  v0.6.0-SUMMARY.md  v0.6.0-VERIFICATION.md
scripts/: Chang_ML_fMRI_Tutorial.ipynb  NLTools_Brain_Data_Class_Tutorial.ipynb  NLTools_Brain_Data_Class_Tutorial.ipynb.REMOVED.git-id  Neurolearn.ipynb  Neurolearn_Test_Script.ipynb  Test_Predict.ipynb  Untitled.ipynb  build_api_docs.py  build_api_vocabulary.py  build_jupyterlite.py  build_marimo_wasm.py  check_kwonly.py  make_legacy_h5_fixtures.py  make_tutorial_data.py  marimo_to_myst.py  postprocess_api_docs.py  pre-commit  release.py  tutorials_to_ipynb.py
tests/: test_analysis.py  test_cross_validation.py  test_data.py
(+647 files in other folders)
