[project]
name = "nltools"
dynamic = ["version"]
requires-python = ">=3.11"
description = "A Python package to analyze neuroimaging data"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name="Luke J. Chang", email="luke.j.chang@dartmouth.edu"},
    {name="Eshin Jolly", email="eshin.jolly@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
]
keywords=["neuroimaging", "preprocessing", "analysis", "machine-learning"]
dependencies = [
    "nilearn>=0.12",
    "polars>=1.35",
    "pynv>=0.3",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
h5 = ["h5py>=3.15", "hdf5plugin>=6.0.0"]
graph = ["networkx>=3.5"]
all = ["nltools[h5,graph]"]

# Installed by default when using uv install
[dependency-groups]
dev = [
    "griffe2md>=1.3.0",
    "h5py>=3.15",
    "hdf5plugin>=6.0.0",
    "ipywidgets>=8.1.7",
    "jupyter-book>=2.1.4",
    "jupytext>=1.18.1",
    "networkx>=3.5",
    "poethepoet>=0.40.0",
    "pytest>=8.4",
    "pytest-xdist>=3.8.0",
    "rich>=14.2.0",
    "ruff==0.14.2",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "ty>=0.0.4",
]

[project.urls]
Homepage = "https://nltools.org"

[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm", "hatchling"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["nltools/tests"]

[tool.setuptools]
package-data = {"nltools" = ["resources/*"]}

[tool.setuptools.dynamic]
version = {attr = "nltools.version.__version__"}

[tool.ruff.lint]
ignore = ["W292","E501", "E731", "E741"]

[tool.pytest.ini_options]
markers = [
    "slow: Tests taking >3s (skipped by default)",
    "integration: End-to-end pipelines on real data (skipped by default)",
    "gpu: Tests requiring CUDA/GPU hardware",
]
# Default: fast unit tests only. Skip slow + integration for iteration speed.
# Run slow tests:        pytest -m slow
# Run integration tests: pytest -m integration
# Run everything:        pytest -m ""
addopts = "-m 'not slow and not integration'"

[tool.ty.src]
# Only check our code, not third-party
include = ["nltools/"]
exclude = ["nltools/tests/"]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
# --- Ignore: ty limitations or third-party stub gaps ---
unresolved-import = "ignore"           # Optional deps (cupy, bids, torch)
unresolved-attribute = "ignore"        # nibabel FileBasedImage stubs missing .affine/.shape/.get_fdata
possibly-missing-attribute = "ignore"  # Same family — unions with None on third-party types
no-matching-overload = "ignore"        # numpy/matplotlib overload resolution failures
parameter-already-assigned = "ignore"  # *args forwarding (MDS, sklearn) confuses ty

# --- Ignore: too noisy, mostly third-party type mismatches ---
unsupported-operator = "ignore"          # Operators on Optional types from third-party unions
not-subscriptable = "ignore"             # Indexing Optional without narrowing (third-party)
invalid-argument-type = "ignore"         # Dominated by numpy/nibabel/sklearn stub gaps
invalid-assignment = "ignore"            # Mixed real and third-party
too-many-positional-arguments = "ignore" # seaborn deprecated positional args

# --- Error: these catch real bugs ---
# invalid-return-type = "error"        # (default)
# division-by-zero = "error"           # (default)
# call-non-callable = "error"          # (default)
# not-iterable = "error"               # (default)

[tool.poe.tasks.lint]
help = "Lint project with ruff and ty"
shell  = """ruff check nltools --fix && ty check nltools"""

[tool.poe.tasks.test]
help = "Run default fast test suite (parallel)"
cmd = "pytest -n auto"

[tool.poe.tasks.test-all]
help = "Run all tests including slow and integration"
cmd = "pytest -m '' -n auto"

[tool.poe.tasks.test-braindata]
help = "Test BrainData class"
cmd = "pytest nltools/tests/data/braindata -n auto -x"

[tool.poe.tasks.test-adjacency]
help = "Test Adjacency class"
cmd = "pytest nltools/tests/data/adjacency nltools/tests/plotting/test_adjacency.py -n auto -x"

[tool.poe.tasks.test-designmatrix]
help = "Test DesignMatrix class"
cmd = "pytest nltools/tests/data/designmatrix -n auto -x"

[tool.poe.tasks.test-collection]
help = "Test BrainCollection class"
cmd = "pytest nltools/tests/data/test_collection.py -n auto -x"

[tool.poe.tasks.test-stats]
help = "Test stats module"
cmd = "pytest nltools/tests/stats -n auto -x"

[tool.poe.tasks.test-core]
help = "Test core algorithms"
cmd = "pytest nltools/tests/core -n auto -x"

[tool.poe.tasks.test-models]
help = "Test models (GLM, ridge, base)"
cmd = "pytest nltools/tests/models -n auto -x"

[tool.poe.tasks.test-io]
help = "Test IO (file reader, h5)"
cmd = "pytest nltools/tests/io_tests -n auto -x"

[tool.poe.tasks.test-plotting]
help = "Test plotting"
cmd = "pytest nltools/tests/plotting -n auto -x"

[tool.poe.tasks.test-support]
help = "Test support utilities"
cmd = "pytest nltools/tests/support -n auto -x"

[tool.poe.tasks.docs-clean]
help = "Clean out built docs for debugging"
shell = """rm -r docs/_build"""

[tool.poe.tasks.docs-generate]
help = "Generate API docs from source with griffe2md"
shell = """python scripts/build_api_docs.py"""

[tool.poe.tasks.docs-build]
help = "Generate API docs then build MyST site"
shell = """python scripts/build_api_docs.py && cd docs && myst build --site --execute"""

[tool.poe.tasks.docs-preview]
help = "Live preview docs"
shell = """cd docs && myst start --execute"""

[tool.griffe2md]
docstring_style = "google"
show_docstring_examples = true
show_signature_annotations = true
separate_signature = true
merge_init_into_class = true
group_by_category = true
show_category_heading = true
members_order = "alphabetical"
heading_level = 2
filters = ["!^_"]
docstring_section_style = "table"
summary = true
show_docstring_raises = false
show_root_full_path = false
show_root_members_full_path = false
show_object_full_path = false

