[project]
name = "nltools"
version = "0.5.1"
requires-python = ">=3.11"
description = "A Python package to analyze neuroimaging data"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name="Luke J. Chang", email="luke.j.chang@dartmouth.edu"},
    {name="Eshin Jolly", email="eshin.jolly@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
]
keywords=["neuroimaging", "preprocessing", "analysis", "machine-learning"]
dependencies = [
    "anywidget>=0.9",
    "huggingface-hub>=0.30",
    "ipyniivue>=2.4.4",
    "joblib>=1.5.3",
    "nilearn>=0.12",
    "numpy>=2.0.2",
    "polars>=1.18",
    "pynv>=0.3",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
h5 = ["h5py>=3.15", "hdf5plugin>=6.0.0"]
graph = ["networkx>=3.5"]
interactive_plots = ["ipywidgets>=8.1.7"]
all = ["nltools[h5,graph,interactive_plots]"]

# Installed by default when using uv install
[dependency-groups]
dev = [
    "git-cliff>=2.0",
    "griffe2md>=1.3.0",
    "h5py>=3.15",
    "hdf5plugin>=6.0.0",
    "ipywidgets>=8.1.7",
    "jupyter-book>=2.1.4",
    "jupytext>=1.18.1",
    "marimo>=0.23",
    "mystmd>=1.10.1",
    "networkx>=3.5",
    "poethepoet>=0.40.0",
    "pytest>=8.4",
    "pytest-xdist>=3.8.0",
    "rich>=14.2.0",
    "ruff==0.14.2",
    "semgrep>=1.100",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "ty>=0.0.4",
]

[project.urls]
Homepage = "https://nltools.org"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nltools"]
# Niftis (templates + parcellations) are fetched lazily from
# huggingface.co/datasets/nltools/niftis on first use, never vendored.
exclude = [
  "nltools/tests",
  "nltools/tests/**",
  "nltools/resources/niftis/**",
  "**/.DS_Store",
]

[tool.hatch.build.targets.sdist]
include = [
  "nltools/**",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]
exclude = [
  "nltools/resources/niftis/**",
  "nltools/tests/data/**",
  "**/.DS_Store",
]

[tool.ruff]
exclude = ["*.ipynb"]

[tool.ruff.lint]
extend-select = ["UP", "C4", "PIE", "RUF022", "RET", "SIM"]
ignore = [
    "W292", "E501", "E731", "E741",
    "RET504",  # named intermediate vars document math intent
    # SIM judgment calls — readability tradeoffs, not style wins:
    "SIM102",  # nested-if collapse can erase step-by-step validation
    "SIM103",  # `return bool(x)` sometimes less explicit than if/return
    "SIM105",  # contextlib.suppress conflicts with NaN-sentinel patterns
    "SIM108",  # ternary forcing (multi-line init often clearer)
    "SIM114",  # if-with-same-arms may be intentional parallel structure
    "SIM116",  # dict-lookup dispatch can hurt readability
    "SIM910",  # bikeshed (explicit None default is fine)
]

[tool.pytest.ini_options]
markers = [
    "slow: Tests taking >3s (skipped by default)",
    "integration: End-to-end pipelines on real data (skipped by default)",
    "gpu: Tests requiring CUDA/GPU hardware",
]
# Only collect the package suite; benchmarks/ carries its own scripts + smoke tests.
testpaths = ["nltools/tests"]
# Default: fast unit tests only. Skip slow + integration for iteration speed.
# Run slow tests:        pytest -m slow
# Run integration tests: pytest -m integration
# Run everything:        pytest -m ""
addopts = "-m 'not slow and not integration'"

[tool.ty.src]
# Only check our code, not third-party
include = ["nltools/"]
exclude = ["nltools/tests/"]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
# --- Ignore: ty limitations or third-party stub gaps ---
unresolved-import = "ignore"           # Optional deps (cupy, bids, torch)
unresolved-attribute = "ignore"        # nibabel FileBasedImage stubs missing .affine/.shape/.get_fdata
possibly-missing-attribute = "ignore"  # Same family — unions with None on third-party types
no-matching-overload = "ignore"        # numpy/matplotlib overload resolution failures
parameter-already-assigned = "ignore"  # *args forwarding (MDS, sklearn) confuses ty

# --- Ignore: too noisy, mostly third-party type mismatches ---
unsupported-operator = "ignore"          # Operators on Optional types from third-party unions
not-subscriptable = "ignore"             # Indexing Optional without narrowing (third-party)
invalid-argument-type = "ignore"         # Dominated by numpy/nibabel/sklearn stub gaps
invalid-assignment = "ignore"            # Mixed real and third-party
too-many-positional-arguments = "ignore" # seaborn deprecated positional args

# --- Error: these catch real bugs ---
# invalid-return-type = "error"        # (default)
# division-by-zero = "error"           # (default)
# call-non-callable = "error"          # (default)
# not-iterable = "error"               # (default)

[tool.poe.tasks.lint]
help = "Fix, format, and type-check (ruff check --fix -> ruff format -> ty check)"
shell = """ruff check nltools --fix && ruff format nltools && ty check nltools"""

[tool.poe.tasks.lint-api]
help = "Enforce v0.6.0 canonical-kwarg API conventions (semgrep rules + keyword-only `*` marker check)"
shell = """semgrep scan --config .semgrep/rules.yml --error --metrics off nltools/ && python scripts/check_kwonly.py"""

[tool.poe.tasks.test]
help = "Run default fast test suite (parallel)"
cmd = "pytest -n auto --maxprocesses=4"

[tool.poe.tasks.test-all]
help = "Run all tests including slow and integration"
cmd = "pytest -m '' -n auto --maxprocesses=4"

[tool.poe.tasks.test-braindata]
help = "Test BrainData class"
cmd = "pytest nltools/tests/data/braindata -n auto --maxprocesses=4 -x"

[tool.poe.tasks.test-adjacency]
help = "Test Adjacency class"
cmd = "pytest nltools/tests/data/adjacency nltools/tests/plotting/test_adjacency.py -n auto --maxprocesses=4 -x"

[tool.poe.tasks.test-designmatrix]
help = "Test DesignMatrix class"
cmd = "pytest nltools/tests/data/designmatrix -n auto --maxprocesses=4 -x"

[tool.poe.tasks.test-collection]
help = "Test BrainCollection class"
cmd = "pytest nltools/tests/data/collection -n auto --maxprocesses=4 -x"

[tool.poe.tasks.test-stats]
help = "Test stats module"
cmd = "pytest nltools/tests/stats -n auto --maxprocesses=4 -x"

[tool.poe.tasks.test-core]
help = "Test core algorithms"
cmd = "pytest nltools/tests/core -n auto --maxprocesses=4 -x"

[tool.poe.tasks.test-models]
help = "Test models (GLM, ridge, base)"
cmd = "pytest nltools/tests/models -n auto --maxprocesses=4 -x"

[tool.poe.tasks.test-io]
help = "Test IO (file reader, h5)"
cmd = "pytest nltools/tests/io_tests -n auto --maxprocesses=4 -x"

[tool.poe.tasks.test-plotting]
help = "Test plotting"
cmd = "pytest nltools/tests/plotting -n auto --maxprocesses=4 -x"

[tool.poe.tasks.test-support]
help = "Test support utilities"
cmd = "pytest nltools/tests/support -n auto --maxprocesses=4 -x"

[tool.poe.tasks.test-pyodide]
help = "Build wheel and run Pyodide/WASM smoke tests (requires node)"
shell = "uv build --wheel && cd nltools/tests/pyodide && npm install --silent && node test_runner.mjs"

[tool.poe.tasks.docs-clean]
help = "Clean built docs (preserves execute cache so unchanged cells don't re-run)"
shell = """cd docs && myst clean --site --html --temp --logs --cache --exports --templates -y"""

[tool.poe.tasks.docs-clean-cache]
help = "Clear MyST execute cache to force re-running all code cells on next build"
shell = """cd docs && myst clean --execute -y"""

[tool.poe.tasks.docs-generate]
help = "Generate API docs (griffe2md) and tutorial markdown (marimo → MyST-NB) from source"
shell = """
set -eu
python scripts/build_api_docs.py
python scripts/marimo_to_myst.py --all
"""

# Build + EXECUTE the MyST site: runs every tutorial code-cell through a Jupyter
# kernel to bake outputs (figures, prints). Set BASE_URL (e.g. /nltools) to deploy
# under a GitHub Pages subpath; leave it unset for a root/local build.
[tool.poe.tasks.docs-site]
help = "Build the MyST site and execute tutorials to bake outputs (set BASE_URL=/nltools for a subpath deploy)"
shell = """
set -eu
# MyST executes tutorial code-cells through a Jupyter kernel named `python3` (see
# each page's kernelspec). Register it into the active venv so a fresh env (CI, a
# new clone) can execute — idempotent, and a no-op harm if already present.
python -m ipykernel install --sys-prefix --name python3 --display-name 'Python 3' >/dev/null 2>&1 || true
cd docs
myst build --site --html --execute
# Standalone interactive Design Tour page (not a MyST page; copied verbatim).
cp public/design-tour.html _build/html/design-tour.html
# MyST does not apply BASE_URL to literal url: TOC/card links (the interactive
# tutorial links + the Design Tour link). On a subpath deploy, prefix them. The
# (?<![\\w-]) guard keeps it idempotent (skips already-prefixed links).
if [ -n "${BASE_URL:-}" ]; then
  find _build/html -type f -name '*.html' -exec perl -pi -e 's{(?<![\\w-])/tutorials/((?:basics|workflows)-)}{$ENV{BASE_URL}/tutorials/$1}g; s{(?<![\\w-])/design-tour\\.html}{$ENV{BASE_URL}/design-tour.html}g' {} +
  find _build/html -type f -name '*.json' -exec perl -pi -e 's{(?<![\\w-])/tutorials/((?:basics|workflows)-)}{$ENV{BASE_URL}/tutorials/$1}g; s{(?<![\\w-])/design-tour\\.html}{$ENV{BASE_URL}/design-tour.html}g' {} +
fi
"""

[tool.poe.tasks.docs-wasm]
help = "Export the marimo tutorials to interactive WASM pages under _build/html/tutorials (honors BASE_URL)"
shell = """python scripts/build_marimo_wasm.py ${BASE_URL:+--base-url ${BASE_URL}/}"""

[tool.poe.tasks.docs-build]
help = "Full docs build: regenerate sources → build + execute the site → add interactive WASM pages (set BASE_URL=/nltools for GitHub Pages)"
sequence = [
  { ref = "docs-generate" },
  { ref = "docs-site" },
  { ref = "docs-wasm" },
]

[tool.poe.tasks.docs-preview]
help = "Live preview the MyST site (API reference + tutorial gallery)"
shell = """cd docs && myst start"""

[tool.poe.tasks.tutorials-check]
help = "Lint tutorial marimo notebooks (static checks, no execution)"
shell = """for nb in docs/tutorials/basics/[0-9]*.py docs/tutorials/workflows/[0-9]*.py; do echo "check $nb"; marimo check "$nb" || exit 1; done"""

[tool.poe.tasks.tutorials-run]
help = "Execute each tutorial marimo notebook as a script to verify it runs end-to-end"
shell = """for nb in docs/tutorials/basics/[0-9]*.py docs/tutorials/workflows/[0-9]*.py; do echo "run  $nb"; python "$nb" || exit 1; done"""

[tool.poe.tasks.tutorials-clean-cache]
help = "Clear the joblib fit cache used by the tutorial notebooks (forces recompute)"
shell = """rm -rf .cache/tutorials docs/.cache/tutorials"""

[tool.poe.tasks.tutorials]
help = "Static-check tutorial notebooks, then verify they run end-to-end"
sequence = [
  { ref = "tutorials-check" },
  { ref = "tutorials-run" },
]

[tool.poe.tasks.changelog]
help = "Regenerate docs/changelog.md from git history via git-cliff"
shell = "git-cliff --output docs/changelog.md"

[tool.poe.tasks.release]
help = "Full release: bump version, build, smoke-test, changelog, tag, publish"
cmd = "python scripts/release.py --target ${target}"
args = [
    { name = "target", options = ["--target"], choices = ["pypi", "testpypi"], default = "pypi" },
]

[tool.griffe2md]
docstring_style = "google"
show_docstring_examples = true
show_signature_annotations = true
separate_signature = true
merge_init_into_class = true
group_by_category = true
show_category_heading = true
members_order = "alphabetical"
heading_level = 2
filters = ["!^_"]
docstring_section_style = "table"
summary = true
show_docstring_raises = false
show_root_full_path = false
show_root_members_full_path = false
show_object_full_path = false
